Changed README to HTML.

--- a/README.html
+++ b/README.html
@@ -1,4 +1,10 @@
-On Windows, put skins in the same directory where the Free42 executable is
+<html>
+<head>
+  <title>README</title>
+<head>
+<body>
+<h3>README</h3>
+<pre>On Windows, put skins in the same directory where the Free42 executable is
 located, or in %APPDATA%\Free42.
 
 On Mac, put skins in $HOME/Library/Application Support/Free42. N.B. This only
@@ -8,13 +14,13 @@ switching.
 On Linux, put the skins in $HOME/.free42/.
 
 On Android, put the skins wherever you like. Remember the location, and, in
-Free42, choose Main Menu -> Skin: Other, and use the file selection dialog to
+Free42, choose Main Menu -&gt; Skin: Other, and use the file selection dialog to
 locate and select the desired skin's layout file.
 
 To use these skins with Free42 on iPhone or iPod touch, you must upload them to
 the device. This is done as follows: on the device, run Free42. Tap in the top
 part of the display to bring up the main menu. In the menu, select "Program
-Import & Export", and in the next menu, select "HTTP Server". You should now
+Import &amp; Export", and in the next menu, select "HTTP Server". You should now
 see a message like "The HTTP server is running at: http://ipod:9090/".
 On your PC or Mac, open a browser window, and point it at the URL shown on the
 iPhone or iPod (the "http://ipod:9090/" in the example above). You should see a
@@ -71,7 +77,7 @@ Macro example:
 To define a key for the FIX command, using key code 38: the sequence of
 calculator keys for FIX is Shift (28), E (16), Sigma+ (1), so...
 
-Key: 38 <sens_rect> <disp_rect> <active_pt>
+Key: 38 &lt;sens_rect&gt; &lt;disp_rect&gt; &lt;active_pt&gt;
 Macro: 38 28 16 1
 
 You can also define PC keyboard mappings in the *.layout file. The syntax is
@@ -84,4 +90,8 @@ keyboard key to a sequence of macros. This is not recommended, however; for
 clarity, it is probably better for key mappings to consist only of one key or
 macro number, preceded by Shift (28) if necessary. This will also allow Free42
 to match the PC keyboard key to a skin-defined key, which will be highlighted
-for visual feedback when the mapping is activated.
+for visual feedback when the mapping is activated.</pre>
+<p>
+<a href=\"..\">Go to Free42 home page</a>
+</body>
+</html>
