Really fixed the "back" link on the README page.

--- a/README.html
+++ b/README.html
@@ -92,6 +92,6 @@ macro number, preceded by Shift (28) if necessary. This will also allow Free42
 to match the PC keyboard key to a skin-defined key, which will be highlighted
 for visual feedback when the mapping is activated.</pre>
 <p>
-<a href=\".\">Go to Free42 skins page</a>
+<a href=".">Go to Free42 skins page</a>
 </body>
 </html>
