Fixed tag error in README.html.

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>README</title>
-<head>
+</head>
 <body>
 <h3>README</h3>
 <pre>On Windows, put skins in the same directory where the Free42 executable is
