Added icon to skins README and index pages.

--- a/README.html
+++ b/README.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>README</title>
+  <link rel="icon" type="image/png" href="../images/free42-icon.png">
 </head>
 <body>
 <h3>README</h3>
