Removed comment about Mac Dashboard version from README.

--- a/README.html
+++ b/README.html
@@ -8,9 +8,7 @@
 <pre>On Windows, put skins in the same directory where the Free42 executable is
 located, or in %APPDATA%\Free42.
 
-On Mac, put skins in $HOME/Library/Application Support/Free42. N.B. This only
-applies to the Application; the Dashboard Widget does not support skin
-switching.
+On Mac, put skins in $HOME/Library/Application Support/Free42.
 
 On Linux, put the skins in $HOME/.free42/.
 
