Added breadcrumbs to README and generated index pages

--- a/plus42/README.html
+++ b/plus42/README.html
@@ -2,9 +2,17 @@
 <head>
   <title>README</title>
   <link rel="icon" type="image/png" href="../images/plus42-icon.png">
+  <style>
+    .crumb { color: DeepPink }
+    .crumb:link { text-decoration: none; }
+    .crumb:visited {text-decoration: none; }
+    .crumb:active { text-decoration: none; }
+    .crumb:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
-<h3>README</h3>
+<h1>README</h1>
+<pre><a href="../.." class="crumb">Home</a> &gt; <a href=".." class="crumb">Plus42</a> &gt; <a href="." class="crumb">Skins</a> &gt; README</pre>
 <pre>On Windows, put skins in the same directory where the Plus42 executable is
 located, or in %APPDATA%\Plus42.
 
